--- a/src/Components/footer/footer.scss
+++ b/src/Components/footer/footer.scss
@@ -7,11 +7,10 @@ footer {
   text-align: center;
   font-family: "Arial", sans-serif;
   font-size: 0.875rem;
-  // position: absolute;
-  // bottom: 0;
+  margin-top: 5%;
 }
 
-.wrapper {
+.footerWrapper {
   display: table-cell;
   vertical-align: middle;
 }
