--- a/src/Components/OngoingMovies/ongoingMovies.scss
+++ b/src/Components/OngoingMovies/ongoingMovies.scss
@@ -1,3 +1,11 @@
+.heading {
+  color: white;
+  margin: 20px;
+  font-size: 1.5rem;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+}
+
 .movieOngoingInfo {
   position: absolute;
   z-index: 3;
@@ -5,6 +13,12 @@
   left: 0;
   color: white;
   margin: 5%;
+
+  .MovieTitle {
+    font-family: "Montserrat", sans-serif;
+    padding-bottom: 20px;
+    font-size: 20px;
+  }
 }
 
 .movieOngoing {
@@ -19,11 +33,11 @@
   width: 100%;
   z-index: 2;
   bottom: -2px;
-  height: 16vh;
+  height: 18vh;
   background-image: linear-gradient(
     180deg,
     transparent,
     rgba(0, 0, 0, 0.8),
-    rgb(10, 10, 10)
+    #1a1a1a
   );
 }
