--- a/src/Pages/home/bhome.scss
+++ b/src/Pages/home/bhome.scss
@@ -1,3 +1,17 @@
 .bookingHome {
   background-color: #1a1a1a;
 }
+
+.buttonLike {
+  color: rgb(255, 255, 255);
+  float: right;
+  margin: 10px;
+  background-color: #696969;
+  padding: 10px;
+  border-radius: 10px;
+  cursor: pointer;
+}
+
+.spacer {
+  margin-bottom: 60px;
+}
