--- a/src/Components/OngoingMovies/ongoingMovies.scss
+++ b/src/Components/OngoingMovies/ongoingMovies.scss
@@ -1,7 +1,7 @@
 .heading {
   color: white;
-  margin: 20px;
-  font-size: 1.5rem;
+  margin: 10px;
+  font-size: 1.4em;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
@@ -23,6 +23,7 @@
 
 .movieOngoing {
   width: 95% !important;
+  left: -8px;
   img {
     width: 100%;
   }
