--- a/src/Components/booking-single/bookingsingle.scss
+++ b/src/Components/booking-single/bookingsingle.scss
@@ -7,6 +7,10 @@ a:hover {
   text-decoration: underline;
 }
 
+.app {
+  background-color: #1a1a1a;
+}
+
 .movie-card {
   font: 14px/22px "Lato", Arial, sans-serif;
   color: #a9a8a3;
@@ -85,7 +89,7 @@ a:hover {
 .cinemaTag {
   position: absolute;
   right: 0;
-  top: 15%;
+  top: 12%;
   z-index: 10;
   color: rgb(255, 255, 255);
   // background-color: rgb(22, 22, 22);
@@ -129,6 +133,7 @@ a:hover {
     position: absolute;
     left: -70%;
     width: 250%;
+    display: none;
   }
 }
 @media (min-width: 800px) and (max-width: 1200px) {
@@ -139,6 +144,7 @@ a:hover {
   .hero iframe {
     width: 100%;
     height: 200%;
+    display: none;
   }
 }
 @media (min-width: 1200px) {
@@ -151,6 +157,7 @@ a:hover {
   .coverImg {
     width: 100%;
     height: auto;
+    display: none;
   }
 }
 
@@ -261,6 +268,7 @@ a:hover {
 
 .tag {
   background: #029400;
+  color: white;
   border-radius: 10px;
   padding: 3px 8px;
   font-size: 14px;
@@ -276,4 +284,18 @@ a:hover {
 
 .ticketButtonDiv {
   margin-top: 15px;
+}
+
+.posterContainer {
+  position: relative;
+  .trailerPlayBooking {
+    position: absolute;
+    border-radius: 0 15px 15px 0;
+    padding-right: 10px;
+    background-color: rgb(146, 146, 146);
+    color: white;
+    z-index: 99;
+    top: 400px;
+    left: 40px;
+  }
 }
