--- a/src/Components/footer/footer.scss
+++ b/src/Components/footer/footer.scss
@@ -7,7 +7,7 @@ footer {
   text-align: center;
   font-family: "Arial", sans-serif;
   font-size: 0.875rem;
-  margin-top: 5%;
+  // margin-top: 5%;
 }
 
 .footerWrapper {
