--- a/src/Components/footer/footer.scss
+++ b/src/Components/footer/footer.scss
@@ -1,3 +1,8 @@
+.app {
+  // position: relative;
+  // min-height: 120vh;
+}
+
 footer {
   background: url("https://orange.codeberryschool.com/content/images/project-assets/simple-footer.png")
     repeat center;
@@ -7,6 +12,11 @@ footer {
   text-align: center;
   font-family: "Arial", sans-serif;
   font-size: 0.875rem;
+
+  // position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 2.5rem;
   // margin-top: 5%;
 }
 
