--- a/src/Pages/Seats/seats.scss
+++ b/src/Pages/Seats/seats.scss
@@ -1,119 +1,140 @@
-.movie-container {
-  margin: 10% 0 0 0;
+.App {
+  text-align: center;
   display: flex;
-  justify-content: center;
+  flex-flow: column;
   align-items: center;
-  flex-direction: column;
 }
 
-@media only screen and (max-width: 800px) {
-  .movie-container {
-    margin: 20% 0 0 0;
+.Movies {
+  margin-bottom: 24px;
+  margin-top: 150px;
+  label {
+    color: white;
   }
 }
 
-.movie-container select {
+.Movies select {
   appearance: none;
-  -moz-appearance: none;
-  -webkit-appearance: none;
-  border: 0;
-  padding: 5px 15px;
-  margin-bottom: 40px;
+  background: white;
   font-size: 14px;
-  border-radius: 5px;
+  margin-left: 12px;
+  border-radius: 4px;
+  padding: 6px 24px;
 }
 
-.container2 {
-  perspective: 1000px;
-  margin: 40px 0;
+.ShowCase {
+  margin: 0 0 48px;
+  padding: 0;
+  list-style: none;
   display: flex;
-  flex-direction: column;
   justify-content: center;
+  background: #3b3b3b;
+  padding: 12px;
+  border-radius: 4px;
+  color: #7e7e7e;
+}
+
+.ShowCase li {
+  margin: 0 12px;
+}
+
+.Cinema {
+  margin-bottom: 18px;
+  perspective: 400px;
+
+  display: grid;
+  place-items: center;
+  grid-gap: 24px;
+}
+
+.Cinema .screen {
+  height: 70px;
+  background: white;
+  width: 100%;
+  transform: rotateX(-30deg) scale(1.1);
+  box-shadow: 0 3px 10px 2px;
+}
+
+.Cinema .seats {
+  display: grid;
+  grid-gap: 6px;
+  grid-template-columns: repeat(8, min-content);
   align-items: center;
 }
 
-.seat {
-  background-color: #444451;
-  height: 12px;
-  width: 15px;
-  margin: 3px;
-  border-top-left-radius: 10px;
-  border-top-right-radius: 10px;
+.Cinema .seats .seat:nth-of-type(8n + 2) {
+  margin-right: 12px;
 }
 
-.selected {
-  background-color: #0081cb;
+.Cinema .seats .seat:nth-of-type(8n + 6) {
+  margin-right: 12px;
 }
 
-.occupied {
-  background-color: #fff;
-}
-
-.seat:nth-of-type(2) {
-  margin-right: 18px;
-}
-
-.seat:nth-last-of-type(2) {
-  margin-left: 18px;
-}
-
-.seat:not(.occupied):hover {
+.Cinema .seats .seat:not(.occupied):hover,
+.Cinema .seats .seat:not(.occupied):focus {
   cursor: pointer;
+  background: #c1eac5;
   transform: scale(1.2);
 }
 
-.showcase .seat:not(.occupied):hover {
-  cursor: default;
-  transform: scale(1);
+.Cinema .seats .seat.selected::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 2px;
+  width: 12px;
+  height: 12px;
+  border-radius: 100%;
+  background: transparent;
+  border: 1px solid #7bc47f;
+  animation: show-off 0.8s;
+  visibility: hidden;
 }
 
-.showcase {
-  display: flex;
-  justify-content: space-between;
-  list-style-type: none;
-  background: rgba(0, 0, 0, 0.1);
-  padding: 5px 10px;
-  border-radius: 5px;
-  color: rgb(255, 255, 255);
+@keyframes show-off {
+  0% {
+    transform: scale(1);
+    opacity: 1;
+    visibility: visible;
+  }
+
+  100% {
+    transform: scale(3);
+    opacity: 0;
+  }
 }
 
-.showcase li {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  margin: 0 10px;
+.seat {
+  display: inline-block;
+  background: #626262;
+  width: 16px;
+  height: 12px;
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
+  transition: transform 0.3s ease-in-out;
+
+  position: relative;
+  top: 1px;
 }
 
-.showcase li small {
-  margin-left: 2px;
+.seat.selected {
+  background: #7bc47f !important;
 }
 
-.row {
-  display: flex;
-  align-items: center;
-  justify-content: center;
+.seat.occupied {
+  background: #cfcfcf;
 }
 
-.screen {
-  background: #fff;
-  height: 70px;
-  width: 70%;
-  margin: 15px 0;
-  transform: rotateX(-45deg);
-  box-shadow: 0 3px 10px rgba(255, 255, 255, 0.7);
+.info {
+  margin-bottom: 200px;
 }
 
-p.text {
-  margin: 40px 0;
-  color: rgb(194, 194, 194);
+.info .count {
+  color: #000000;
+  font-weight: bolder;
 }
 
-p.text span {
-  color: #0081cb;
-  font-weight: 600;
-  box-sizing: content-box;
-}
-
-.credits a {
-  color: #fff;
+.info .total {
+  color: #000000;
+  font-weight: bolder;
 }
