--- a/src/Pages/Seats/seats.scss
+++ b/src/Pages/Seats/seats.scss
@@ -5,11 +5,33 @@
   align-items: center;
 }
 
+.test {
+  background-color: rgba(0, 0, 0, 0.561);
+  width: 100%;
+}
+
+.ticket_fadebottom {
+  position: absolute;
+  width: 100%;
+  z-index: 0;
+  bottom: -116px;
+  height: 18vh;
+  background-image: linear-gradient(
+    180deg,
+    transparent,
+    rgba(0, 0, 0, 0.8),
+    #111111
+  );
+}
+
 .Movies {
   margin-bottom: 24px;
   margin-top: 150px;
   label {
     color: white;
+  }
+  select {
+    font-family: fontAwesome;
   }
 }
 
@@ -23,7 +45,9 @@
 }
 
 .ShowCase {
-  margin: 0 0 48px;
+  margin: auto;
+  margin-bottom: 40px;
+  width: 380px;
   padding: 0;
   list-style: none;
   display: flex;
@@ -146,6 +170,8 @@
 
 .info {
   margin-bottom: 10px;
+  width: 380px;
+  margin: auto;
 }
 
 .info .count {
