--- a/src/Pages/Payment/payment.scss
+++ b/src/Pages/Payment/payment.scss
@@ -1,12 +1,11 @@
 .ticket {
   font-family: sans-serif;
-
   background-repeat: no-repeat;
   background-position: top;
   background-size: 100%;
   background-color: #04030c;
-  width: 700px;
-  height: 300px;
+  width: 400px;
+  height: 200px;
   border-radius: 15px;
   -webkit-filter: drop-shadow(1px 1px 3px rgba(0, 0, 0, 0.3));
   filter: drop-shadow(1px 1px 3px rgba(0, 0, 0, 0.3));
@@ -16,75 +15,65 @@
 }
 
 .date {
-  margin: 15px;
+  float: right;
   -webkit-filter: drop-shadow(1px 1px 3px rgba(0, 0, 0, 0.3));
   filter: drop-shadow(1px 1px 3px rgba(0, 0, 0, 0.3));
+  adding-right: 10px;
 }
 
 .date .day {
+  float: right;
   font-size: 80px;
-  float: left;
 }
 
 .date .month-and-time {
   float: left;
-  margin: 15px 0 0 0;
+  margin: 25px 0 0 0;
   font-weight: bold;
 }
 
 .artist {
-  font-size: 30px;
-  margin: 10px 100px 0 40px;
-  float: left;
+  font-size: 20px;
   font-weight: bold;
-  -webkit-filter: drop-shadow(1px 1px 3px rgba(0, 0, 0, 0.3));
-  filter: drop-shadow(1px 1px 3px rgba(0, 0, 0, 0.3));
-}
+  margin: 0px 138px 0 17px;
+  padding: 20px;
 
-.location {
-  float: left;
-  margin: 135px 0 0 78px;
-  font-size: 30px;
-  font-weight: bold;
-  -webkit-filter: drop-shadow(1px 1px 3px rgba(0, 0, 0, 0.3));
-  filter: drop-shadow(1px 1px 3px rgba(0, 0, 0, 0.3));
-}
-
-.location::before {
-  background-image: url("https://upload.wikimedia.org/wikipedia/commons/c/cb/QRCodeWikipedia.png");
-  background-size: 110px 110px;
-  width: 110px;
-  height: 110px;
-  content: "";
-  display: inline-block;
-  float: left;
-  position: absolute;
-  left: -160px;
-  bottom: 5px;
-  -webkit-filter: drop-shadow(1px 1px 3px rgba(0, 0, 0, 0.3));
-  filter: drop-shadow(1px 1px 3px rgba(0, 0, 0, 0.3));
-}
-
-.rip {
-  border-right: 8px dotted #436ea5;
-  height: 300px;
-  position: absolute;
-  top: 0;
-  left: 530px;
+  span {
+    font-family: "Poppins", sans-serif;
+  }
 }
 
 .cta {
-  color: white;
+  color: rgb(0, 0, 0);
+  float: right;
 }
 
 .small {
   font-weight: 200;
 }
 
-.ticket-1 {
-  background-image: url(https://images.unsplash.com/photo-1483101974978-cf266fdf1139?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=3289&q=80);
+.payment_fadebottom {
+  position: absolute;
+  width: 100%;
+  z-index: 0;
+  bottom: 0;
+  height: 18vh;
+  background-image: linear-gradient(
+    180deg,
+    transparent,
+    rgb(0 0 0 / 52%),
+    #000000
+  );
 }
 
-.ticket-2 {
-  background-image: url(https://images.unsplash.com/photo-1550184658-ff6132a71714?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2180&q=80);
+.bookedTickets {
+  padding: 40px;
+  position: absolute;
+  z-index: 1;
+  top: 50%;
+
+  span {
+    font-size: 13px;
+    color: rgb(194, 194, 194);
+  }
 }
