--- a/src/Pages/Payment/payment.scss
+++ b/src/Pages/Payment/payment.scss
@@ -4,7 +4,7 @@
   background-position: top;
   background-size: 100%;
   background-color: #04030c;
-  width: 400px;
+  width: 100%;
   height: 200px;
   border-radius: 15px;
   -webkit-filter: drop-shadow(1px 1px 3px rgba(0, 0, 0, 0.3));
@@ -18,7 +18,7 @@
   float: right;
   -webkit-filter: drop-shadow(1px 1px 3px rgba(0, 0, 0, 0.3));
   filter: drop-shadow(1px 1px 3px rgba(0, 0, 0, 0.3));
-  adding-right: 10px;
+  padding-right: 15px;
 }
 
 .date .day {
@@ -76,4 +76,98 @@
     font-size: 13px;
     color: rgb(194, 194, 194);
   }
+}
+
+.st_dtts_wrapper {
+  margin-top: 110px;
+  margin-bottom: 40px;
+  color: white;
+}
+
+.st_cherity_section {
+  margin-top: 30px;
+  background: #ffffff;
+  box-shadow: 0 2px 4px 0 rgb(0 0 0 / 12%);
+  border-radius: 0px 0px 4px 4px;
+}
+
+.st_cherity_btn {
+  padding-top: 30px;
+}
+
+.StripeCheckout {
+  overflow: hidden;
+  display: inline-block;
+  background: linear-gradient(rgb(40, 160, 229), rgb(1, 94, 148));
+  padding: 6px !important;
+  width: 100%;
+  text-decoration: none;
+  border-radius: 5px;
+  box-shadow: rgb(0 0 0 / 20%) 0px 1px 0px;
+  cursor: pointer;
+  visibility: visible;
+  user-select: none;
+}
+
+.spacer {
+  margin-bottom: 30px;
+}
+
+// aaaaaaaaaaaaaaaaaaaa
+
+.st_dtts_bs_wrapper {
+  background: #fff;
+  box-shadow: 0 2px 4px 0 rgb(0 0 0 / 12%);
+  border-radius: 12px;
+}
+.st_dtts_bs_heading {
+  background: rgb(87, 87, 87);
+  padding: 12px 20px;
+  border-radius: 10px 10px 0 0;
+}
+.st_dtts_bs_heading p {
+  font-size: 25px;
+  color: #ffffff;
+  letter-spacing: 1px;
+  text-align: center;
+}
+.st_dtts_sb_ul {
+  padding: 20px;
+  padding-bottom: 80px;
+  border-bottom: 1px dashed rgba(0, 0, 0, 0.54);
+}
+ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+.st_dtts_sb_ul li:first-child {
+  margin-top: 0;
+}
+.st_dtts_sb_ul li {
+  font-size: 14px;
+  color: #333545;
+  letter-spacing: 1px;
+  float: left;
+  width: 100%;
+  margin-top: 20px;
+}
+.st_dtts_sb_ul li span {
+  float: right;
+  margin-top: -22px;
+}
+
+.st_dtts_sb_h2 {
+  padding: 20px;
+}
+
+.st_dtts_sb_h2 h5 {
+  padding-top: 30px;
+  font-size: 18px;
+  color: rgba(0, 0, 0, 0.87);
+  letter-spacing: 0;
+  font-weight: 800;
+}
+.st_dtts_sb_h2 h5 span {
+  float: right;
 }
