--- a/src/Pages/Seats/seats.scss
+++ b/src/Pages/Seats/seats.scss
@@ -144,8 +144,9 @@
 .seat {
   display: inline-block;
   background: #626262;
-  width: 16px;
-  height: 12px;
+  width: 20px;
+  margin: 2px;
+  height: 16px;
   border-top-left-radius: 10px;
   border-top-right-radius: 10px;
   transition: transform 0.3s ease-in-out;
