--- a/src/Components/movie-banner/mbanner.scss
+++ b/src/Components/movie-banner/mbanner.scss
@@ -14,7 +14,7 @@ html {
 .BannerSlider {
   width: 100%;
   margin: auto;
-  padding-top: 90px;
+  // padding-top: 90px;
 
   iframe {
     height: 575px;
