--- a/src/Components/navbar/navbar.scss
+++ b/src/Components/navbar/navbar.scss
@@ -1,88 +1,130 @@
-.navbar {
-  color: white;
-  width: 100%;
-  font-size: 14px;
-  position: fixed;
-  top: 0;
-  z-index: 999;
-  background: linear-gradient(to top, transparent 0%, rgb(0, 0, 0, 0.3) 50%);
+// .navbar {
+//   color: white;
+//   width: 100%;
+//   font-size: 14px;
+//   position: fixed;
+//   top: 0;
+//   z-index: 999;
+//   background: linear-gradient(to top, transparent 0%, rgb(0, 0, 0, 0.3) 50%);
 
-  &.scrolled {
-    background-color: var(--main-color);
-  }
+//   &.scrolled {
+//     background-color: var(--main-color);
+//   }
 
-  .container {
-    padding: 0 30px;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    height: 70px;
+//   .container {
+//     padding: 0 30px;
+//     display: flex;
+//     align-items: center;
+//     justify-content: space-between;
+//     height: 70px;
 
-    .left {
-      display: flex;
-      align-items: center;
-      img {
-        height: 30px;
-        margin-right: 40px;
-        // filter: invert(1);
-        // filter: grayscale(1);
-      }
+//     .left {
+//       display: flex;
+//       align-items: center;
+//       img {
+//         height: 30px;
+//         margin-right: 40px;
+//         // filter: invert(1);
+//         // filter: grayscale(1);
+//       }
 
-      span {
-        margin-right: 20px;
-        cursor: pointer;
-      }
+//       span {
+//         margin-right: 20px;
+//         cursor: pointer;
+//       }
 
-      .linking {
-        margin-right: 20px;
-        text-decoration: none;
-        color: white;
-      }
-    }
+//       .linking {
+//         margin-right: 20px;
+//         text-decoration: none;
+//         color: white;
+//       }
+//     }
 
-    .right {
-      display: flex;
-      align-items: center;
+//     .right {
+//       display: flex;
+//       align-items: center;
 
-      .icon {
-        margin: 0px 30px;
-        cursor: pointer;
-      }
+//       .icon {
+//         margin: 0px 30px;
+//         cursor: pointer;
+//       }
 
-      img {
-        width: 30px;
-        height: 30px;
-        border-radius: 5px;
-        object-fit: cover;
-        cursor: pointer;
-      }
+//       img {
+//         width: 30px;
+//         height: 30px;
+//         border-radius: 5px;
+//         object-fit: cover;
+//         cursor: pointer;
+//       }
 
-      .profile {
-        .options {
-          display: none;
-          background-color: var(--main-color);
-          border-radius: 5px;
-          margin-top: 5px;
-        }
+//       .profile {
+//         .options {
+//           display: none;
+//           background-color: var(--main-color);
+//           border-radius: 5px;
+//           margin-top: 5px;
+//         }
 
-        span {
-          padding: 10px;
-          cursor: pointer;
-          color: white;
-        }
+//         span {
+//           padding: 10px;
+//           cursor: pointer;
+//           color: white;
+//         }
 
-        &:hover {
-          .options {
-            display: flex;
-            flex-direction: column;
-            position: absolute;
-          }
-        }
-      }
-    }
+//         &:hover {
+//           .options {
+//             display: flex;
+//             flex-direction: column;
+//             position: absolute;
+//           }
+//         }
+//       }
+//     }
+//   }
+// }
+
+// .contain {
+//   max-width: 1900px !important;
+// }
+
+.navbarBrand {
+  img {
+    width: 50%;
   }
 }
-
-.contain {
-  max-width: 1900px !important;
+.navbar {
+  padding-top: 1rem !important;
+  padding-bottom: 1rem !important;
+}
+.navbar-brand {
+  margin-right: 0 !important;
+}
+.navlink:hover {
+  text-decoration: none;
+}
+.navbar-dark .navbar-nav .nav-link {
+  color: white;
+}
+.navbar-dark{
+  background-color: black ;
+}
+.navbar-dark .navbar-nav .nav-link:focus,
+.navbar-dark .navbar-nav .nav-link:hover {
+  color: white;
+  text-decoration: none;
+}
+.dropdown-menu {
+  background-color: black;
+}
+.linking {
+  text-decoration: none;
+  color: white;
+  margin: 6px 0;
+  margin-right: 20px;
+  span {
+    text-decoration: none;
+  }
+}
+.rightLinks {
+  padding: 12px;
 }
