Major Release(Fix #2_1)

--- a/src/Components/movie-banner/mbanner.scss
+++ b/src/Components/movie-banner/mbanner.scss
@@ -18,7 +18,7 @@ html {
   img {
     background-repeat: no-repeat;
     background-size: cover;
-    height: 500px !important;
+    height: auto !important;
   }
 
   iframe {
