--- a/src/Pages/ListHalls/listhalls.scss
+++ b/src/Pages/ListHalls/listhalls.scss
@@ -40,11 +40,16 @@ body {
   }
 }
 
+.hallBanner {
+  margin-bottom: 10px;
+}
+
 .hallTitle {
   margin-bottom: 6%;
   max-width: 100%;
   position: relative;
   .hallTitleAbsolute {
+    margin: 15px;
     position: absolute;
     top: 75%;
     left: 20%;
@@ -66,6 +71,21 @@ body {
   }
   img {
     width: 100%;
+  }
+}
+
+@media only screen and (max-width: 1200px) {
+  .hallTitleAbsolute {
+    position: relative !important;
+    transform: translate(0, 0) !important;
+    text-align: center !important;
+    left: 0 !important;
+  }
+  .hallTitleMain {
+    text-align: center !important;
+  }
+  .hallTitleSub {
+    text-align: center !important;
   }
 }
 
