Major Release(Fix #3)

--- a/src/Pages/Blogs/blogs.scss
+++ b/src/Pages/Blogs/blogs.scss
@@ -23,7 +23,7 @@
   }
   .readmore {
     margin-top: 5%;
-    width: 15%;
+    width: 150px;
     text-align: center;
     padding: 10px;
     // border-radius: 12px;
@@ -38,6 +38,7 @@
   font-weight: bolder;
   background-color: rgb(255, 255, 255);
   cursor: pointer;
+  text-decoration: none;
 }
 
 .blogs_fadebottom {
