--- a/src/Pages/Blogs/blog.scss
+++ b/src/Pages/Blogs/blog.scss
@@ -1,6 +1,12 @@
 .blogHeader {
   width: 100%;
-  height: 58vh;
+  // height: 50vh;
+  overflow: hidden;
+  img {
+    background-size: cover;
+    width: 100%;
+    transform: translate(0, 0%);
+  }
 }
 .blog_content {
   h2 {
@@ -14,5 +20,14 @@
     color: rgb(199, 199, 199);
     font-size: 1.2rem;
     padding: 5%;
+  }
+}
+
+@media only screen and (min-width: 1000px) {
+  .blogHeader {
+    height: 50vh;
+    img {
+      transform: translate(0, -15%);
+    }
   }
 }
