Major Realease(v5-Added header logo and fixed the preloader)

--- a/src/App.scss
+++ b/src/App.scss
@@ -24,14 +24,13 @@
 :root {
   --main-color: #0b0b0b;
 }
-html,
-body {
-}
+
 .text-success {
   position: absolute;
   z-index: 999;
   left: 48%;
   bottom: 50%;
+  color: #00e70c !important;
 }
 .spinner-border {
   width: 3rem !important;
@@ -40,4 +39,10 @@ body {
 .spinnerBack {
   background-color: black;
   height: 100vh;
+}
+
+@media only screen and (max-width: 762px) {
+  .text-success {
+    left: 44%;
+  }
 }
