--- a/src/Pages/ListHalls/listhalls.scss
+++ b/src/Pages/ListHalls/listhalls.scss
@@ -117,7 +117,7 @@ body {
     color: rgb(245, 245, 245);
     font-weight: bold;
     font-size: 18px;
-    line-height: 5px;
+    // line-height: 5px;
     margin-top: 20px;
   }
   p {
