--- a/src/Components/navbar/navbar.scss
+++ b/src/Components/navbar/navbar.scss
@@ -86,7 +86,11 @@
 // .contain {
 //   max-width: 1900px !important;
 // }
-
+.sticky-nav {
+  position: sticky;
+  top: 0;
+  z-index: 999;
+}
 .navbarBrand {
   img {
     width: 50%;
@@ -105,8 +109,8 @@
 .navbar-dark .navbar-nav .nav-link {
   color: white;
 }
-.navbar-dark{
-  background-color: black ;
+.navbar-dark {
+  background-color: black;
 }
 .navbar-dark .navbar-nav .nav-link:focus,
 .navbar-dark .navbar-nav .nav-link:hover {
